# aussprachetrainer

./: .gitignore  LICENSE  PACKAGING.md  README.md  devenv.nix  flake.nix  kokoro.whl  pyproject.toml  reproduction_autocomplete.py  test_core.py  verify_text_engine.py
.github/workflows/: build.yml
src/aussprachetrainer/: api.py  autocomplete.py  backend.py  config.py  database.py  database.py.bak  gui.py  gui.py.bak  hunspell_wrapper.py  main.py  ranking.py  text_engine_wrapper.py  trie.py  vim_editor.py
src/aussprachetrainer/lib/: text_engine.c  zep_wrapper.cpp
src/aussprachetrainer/resources/: words_de.txt
tests/: reproduce_entry_undo.py  test_clipboard_backend.py  test_clipboard_issue_reproduction.py  test_comprehensive.py  test_database.py  test_history_ux.py  test_ipa_comprehensive.py  test_ipa_quality.py  test_r_and_redo.py  test_search_undo_redo.py  test_ui.py  test_umlaut_input.py  test_vim.py  test_vim_full_clipboard.py
